tests/NormalTests/paczka1/small_fuzzy/14697034.err
Error in line 1: S680 S541 3,4
Error in line 6: qPuJzenw0n S680 20,8
Error in line 8: 68O S832 68,8
Error in line 15: qnO9uasw6c S832 8,7
